/*
 * Copyright 2019 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package wire;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  /**
   * Annotates a field that starts to be available with a specified version.
   *
   * The value is the earliest version in which the annotated field is retained. It is pruned from
   * all preceding versions.
   */
  optional string since = 1076;

  /**
   * Annotates a field that ceases to be available with a specified version.
   *
   * The value is the version that drops the annotated field. It is not available in that version or
   * any subsequent version.
   */
  optional string until = 1077;

  /**
   * Uses an Array at runtime to hold the values, to avoid autoboxing on the JVM. Will use the appropriate
   * array type, for example `repeated float` would be represented as a FloatArray.
   */
  optional bool use_array = 1185;

  /**
   * Whether to make an immutable copy of a repeated or map field. Defaults to true.
   *
   * When set to false, it is up to the developer to avoid mutating any Maps or Lists after they are used
   * to create a Message as the Message will reference those collections rather than creating a copy. In exchange,
   * the developer can avoid the overhead of creating a list which can be excessive for long lists or for performance
   * critical usages.
   */
   // TODO(jeff) - Reserve an actual option similar to https://github.com/protocolbuffers/protobuf/pull/12491/changes
  optional bool make_immutable_copy = 1186;
}

extend google.protobuf.EnumOptions {
  /**
   * Defines how an enum type is to be generated. This is only supported by Kotlin generation.
   * - 'enum_class': the enum type will be generated as a Kotlin enum class.
   * - 'sealed_class': the enum type will be generated as a Kotlin sealed class.
   *
   * When set, the value of this option takes precedence over the global enum mode that may be set
   * at the Kotlin target level in the Wire Gradle plugin.
   */
  optional string enum_mode = 1190;
}

extend google.protobuf.EnumValueOptions {
  /**
   * Annotates an enum constant that starts to be available with a specified version.
   *
   * The value is the earliest version in which the annotated constant is retained. It is pruned
   * from all preceding versions.
   */
  optional string constant_since = 1076;

  /**
   * Annotates an enum constant that ceases to be available with a specified version.
   *
   * The value is the version that drops the annotated constant. It is not available in that version
   * or any subsequent version.
   */
  optional string constant_until = 1077;
}

extend google.protobuf.FileOptions {
  /**
   * Sets the JVM package where classes generated from this .proto will be placed. `wire_package`
   * takes precedence over `java_package` which itself takes precedence over the proto package.
   * This option can be used to avoid collision when generating from both Wire and Protoc.
   */
  optional string wire_package = 1087;
}
